--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
