--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-croppa": "^1.3.6",
